--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Getting Quizy With It!</title>
-	<script type="text/javascript" src="jquery-2.1.4.js"></script>
-	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -26,6 +26,26 @@
 	 <p>Are You Prepared?</p>
 	 <button type="button" class="startButton">START</button>
 	</div>
+
+ 	<div class="question">
+ 		<p>What is the best 90's computer movie?</p>
+ 		 	<ul class="answeres">
+ 		 	<li class="A">First Answer</li>
+ 		 	<li class="B">Second Answer</li>
+ 		 	<li class="C">Third Answer</li>
+ 		 	<li class="D">Forth Answer</li>
+ 		 	<ul>
+ 		 	<!-- raido buttons -->
+ 		 	<form>
+ 		 		<input type="radio" name="answer" value=""></input><br>
+ 		 		<input type="radio" name="answer" value=""></input><br>
+ 		 		<input type="radio" name="answer" value=""></input><br>
+ 		 		<input type="radio" name="answer" value=""></input><br>
+ 		 		<input type="submit" value="Submit"></input>
+ 		 	</form>
+ 		 	<!-- submit button -->
+ 	</div>
+
 
 </body>
 </html>
