add button formatting

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	</ul>
 	</nav>
 	 <header>
-	 <h1>Can You Name The Best <br> 90’s Computer Nerd Movies <br> Of All Time?</h1>
+	 <h1>Can You Name The Best 90’s Computer Nerd Movies Of All Time?</h1>
 	</header>
 	
-	<div class="quizzStart">
-	 <p>Are You Prepared?</p>
+	<div class="quizStart">
+	 <p class="startText">Are You Prepared?</p>
 	 <button type="button" class="startButton">START</button>
 	</div>
 
@@ -41,7 +41,7 @@
  		 		
 	 		 	<li class="D"><input type="radio" name="answer" value=""></input>Forth Answer</li>
  		 		<!-- submit button -->
- 		 		<input type="submit" value="Submit"></input>
+ 		 		<input type="submit" value="SUBMIT" class="submitButton"></input>
  		 	</form>
  	</div>
 	<footer class="bottom">
