change li to span

--- a/index.html
+++ b/index.html
@@ -58,10 +58,15 @@
  		 	</ul>
  		 </form>
  	</div>
+
+ 	<div class="quizEnd">
+	 <p class="endText">GAME OVER!!!!</p>
+	</div>
+
 	<footer class="bottom">
 		<ul class="bottomInfo">
-			<li>count</li>
-			<li>right</li>
+			<p>3/<span id="count">0</span> so far!</p>
+			<p>You got <span id="right">0</span> right!</p>
 		</ul>
 	</footer>
 
