html for about me

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<ul class="topInfo">
 		<li>
 			<a class="about" href="#">About This Quiz:</a>
+				<article class="aboutInfo">This quiz is written by Keegan Ariel. She made this to practice using her her kickass Jquery skills. This is a project for Thinkful.></article>
+
+
 		</li>
 		<li>
 			<a class="new" href="#">Start a new quiz:</a>
@@ -65,7 +68,7 @@
 
 	<footer class="bottom">
 		<ul class="bottomInfo">
-			<p>3/<span id="count">0</span> so far!</p>
+			<p><span id="count">0</span>/5 so far!</p>
 			<p>You got <span id="right">0</span> right!</p>
 		</ul>
 	</footer>
