--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<nav class="top">
+	
+		<div class="leftborder"></div>
+		<div class="rightborder"></div>
+		<div class="topborder"></div>
+		<div class="bottomborder"></div>
+		
+	<nav class="topper">
 		<ul class="topInfo">
 			<li>
 				<a class="about" href="#">About This Quiz:</a>
