fix formatting/ inline

--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 	<script type="text/javascript" src="js/app.js"></script>
 	<link rel="stylesheet" type="text/css" href="js/jquery-ui-1.11.4.custom/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 </head>
 <body>
 	
-		<div class="leftborder"></div>
-		<div class="rightborder"></div>
-		<div class="topborder"></div>
-		<div class="bottomborder"></div>
-		
+	<div class="leftborder"></div>
+	<div class="rightborder"></div>
+	<div class="topborder"></div>
+	<div class="bottomborder"></div>
+	
 	<nav class="topper">
 		<ul class="topInfo">
 			<li>
 				<a class="about" href="#">About This Quiz:</a>
-				<article class="aboutInfo">This quiz is written by Keegan Ariel. She made this to practice using her kickass Jquery skills. This is a project for Thinkful.</article>
+				<article class="aboutInfo">This quiz is written by <a href="http://keeganariel.github.io/about-me/">Keegan Ariel</a> . She made this to practice using her kickass Jquery skills.</article>
 
 
 			</li>
@@ -64,7 +65,7 @@
 					<input type="radio" name="answer" value="D"></input>
 					<span>4th Answer</span>
 				</li>
-				<!-- submit button -->
+
 				<input type="submit" value="SUBMIT" class="submitButton"></input>
 			</ul>
 		</form>
@@ -74,6 +75,15 @@
 		<p class="endText">GAME OVER!!!!</p>
 		<p class="counters">You got <span id="rightTotal">0</span> right!!</p>
 	</section> 
+
+	<div class="socialIcons"> 
+		<a href="https://github.com/KeeganAriel" id="gitIcon">
+			<i class="fa fa-github-alt fa-3x" aria-hidden="true"></i>
+		</a>
+		<a href="http://keeganariel.github.io/about-me/" id="infoIcon">
+			<i class="fa fa-info-circle fa-3x" aria-hidden="true"></i>
+		</a>
+	</div>
 
 	<footer class="bottom">
 		<ul class="bottomInfo">
